Commit almost finish

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -73,6 +73,7 @@
         "phone": "Phone:",
         "password": "Password:",
         "role": "Role:",
+        "photo": "Photo:",
         "landlord": "Landlord",
         "renting": "Renting",
         "btnEnter": "Register",
