--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -73,6 +73,7 @@
         "phone": "Номер телефону:",
         "password": "Пароль:",
         "role": "Роль:",
+        "photo": "Фото:",
         "landlord": "Орендодавець",
         "renting": "Орендатор",
         "btnEnter": "Зареєструватись",
