--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -185,5 +185,9 @@
 
     "statistics": {
         "titleStatistics": "Statistics"
+    },
+
+    "rented": {
+        "titleRented": "Rented stuff"
     }
 }
